# tab_extractor

./: pyproject.toml  readme.md
demos/: extract.py
tab_extractor/: __init__.py  configs.py  loader.py  processor.py  util.py
